# fastapi-plugandplay-eng

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
project/: requirements.txt  run_uvicorn.sh
project/api/: __init__.py  app.py  settings.py
project/api/database/: __init__.py
project/api/exceptions/: __init__.py
project/api/models/: example.py
project/api/modules/: example.py  math.py
project/api/modules/default/: middleware.py
project/api/routes/: example.py  math.py
project/api/schemas/: __init__.py  example.py
project/api/utils/: logger.py
src/app/: __main__.py  main.py
src/app/api/v1/: router.py
src/app/api/v1/routes/: example.py  health.py
src/app/core/: config.py  lifespan.py  logging.py  middleware.py
src/app/db/: mongo.py
src/app/schemas/: example.py  health.py
src/app/services/: example.py
tests/: test_example.py  test_health.py
